--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Welcome to Jumpstart!</h1>
-<p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+<h1>Welcome to Tailor Made example!</h1>
+
+<p>This application contains Tailor Made and Blazer, which are Business
+inteligence gems.</p>
+
+<ul>
+  <li>Try <%= link_to "Blazer", blazer_path %></li>
+  <li>Try <%= link_to "Tailor Made", "#{}" %>, this gem was developed to help humans explore their database.</li>
+</ul>
