--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,5 +5,5 @@ inteligence gems.</p>
 
 <ul>
   <li>Try <%= link_to "Blazer", blazer_path %></li>
-  <li>Try <%= link_to "Tailor Made", "#{}" %>, this gem was developed to help humans explore their database.</li>
+  <li>Try <%= link_to "Tailor Made", tailor_made_ratings_path %>, this gem was developed to help humans explore their database.</li>
 </ul>
