--- a/app/views/layouts/blazer/_navbar.html.erb
+++ b/app/views/layouts/blazer/_navbar.html.erb
@@ -15,7 +15,13 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li class="nav-item">
-          <%= link_to "What's New", main_app.announcements_path, class: "nav-lin" %>
+          <%= link_to "Tailor Made", main_app.tailor_made_ratings_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Blazer", main_app.blazer_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "What's New", main_app.announcements_path, class: "nav-link" %>
         </li>
       </ul>
     </div>
