--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,6 +18,7 @@
       </ul>
 
       <ul class="navbar-nav">
+        <li class="nav-item"><%= link_to "Tailor Made", tailor_made_ratings_path, class: "nav-link" %></li>
         <li class="nav-item"><%= link_to "Blazer", blazer_path, class: "nav-link" %></li>
         <li class="nav-item"><%= link_to "What's New", announcements_path, class: "nav-link #{unread_announcements(current_user)}" %></li>
       </ul>
