tailor made assets

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,9 @@
 @import "font-awesome";
 @import "bootstrap";
 @import "sticky-footer";
+@import "~flatpickr/dist/flatpickr.css";
+@import "~selectize/dist/css/selectize.css";
+@import "~selectize/dist/css/selectize.bootstrap3.css";
 @import "announcements";
 
 // Fixes bootstrap nav-brand container overlap
